force-app/main/default/objects/Opportunity/fields/Arbutus_opp_number__c.field-meta.xml
<CustomField>
    <fullName>Arbutus_opp_number__c</fullName>
    <formula>AWL_Opportunity_Number__c  +  text(  Opp_Integer_Arbutus__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AWL Opportunity Number</label>
    <type>Text</type>
</CustomField>