force-app/main/default/objects/Opportunity/fields/AWL_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>AWL_Opportunity_Number__c</fullName>
    <label>AWL Opportunity Number Related to Flow</label>
    <length>128</length>
    <type>Text</type>
</CustomField>