force-app/main/default/objects/Opportunity/fields/CSSP_Contract__c.field-meta.xml
<CustomField>
    <fullName>CSSP_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSSP Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities (CSSP Contract)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>