force-app/main/default/objects/Opportunity/fields/CSSP_Order__c.field-meta.xml
<CustomField>
    <fullName>CSSP_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSSP Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>CSSP Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>