force-app/main/default/objects/Opportunity/fields/Custom_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Close_Date__c</fullName>
    <label>Custom Close Date</label>
    <type>Date</type>
</CustomField>