force-app/main/default/objects/Opportunity/fields/Estimated_ship_date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_ship_date__c</fullName>
    <description>Date the product is expected to be shipped</description>
    <inlineHelpText>Date the product is expected to be shipped.</inlineHelpText>
    <label>Estimated Ship Date (ESD)</label>
    <type>Date</type>
</CustomField>