force-app/main/default/objects/Opportunity/fields/FPS_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>FPS_Opportunity_Number__c</fullName>
    <label>FPS Opportunity Number Used in flow</label>
    <length>128</length>
    <type>Text</type>
</CustomField>