force-app/main/default/objects/Opportunity/fields/Fundamental_Account__c.field-meta.xml
<CustomField>
    <fullName>Fundamental_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fundamental Account</label>
    <type>Checkbox</type>
</CustomField>