force-app/main/default/objects/Opportunity/fields/fundamental_opportunity_number__c.field-meta.xml
<CustomField>
    <fullName>fundamental_opportunity_number__c</fullName>
    <formula>FPS_Opportunity_Number__c +  text( Opp_Integer_Fundamentals__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FPS Opportunity Number</label>
    <type>Text</type>
</CustomField>