force-app/main/default/objects/Opportunity/fields/Invoice_Fully_Paid__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Fully_Paid__c</fullName>
    <description>Indicates the associated QuickBooks Invoice has been paid in full</description>
    <formula>AND(
NOT(ISNULL(Quickbooks_Invoice_Balance__c)),
Quickbooks_Invoice_Balance__c = 0
)</formula>
    <inlineHelpText>Indicates the associated QuickBooks Invoice has been paid in full</inlineHelpText>
    <label>Invoice Fully Paid</label>
    <type>Checkbox</type>
</CustomField>