force-app/main/default/objects/Opportunity/fields/Invoice_Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Service_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Service Contract</label>
    <type>Checkbox</type>
</CustomField>