force-app/main/default/objects/Opportunity/fields/Is_Closed_Today__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closed Today</label>
    <type>Checkbox</type>
</CustomField>