force-app/main/default/objects/Opportunity/fields/Legacy_Associated_Contact__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Associated_Contact__c</fullName>
    <label>Legacy Associated Contact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>