force-app/main/default/objects/Opportunity/fields/Loss_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Other__c</fullName>
    <label>Loss Reason (Other)</label>
    <length>44</length>
    <type>Text</type>
</CustomField>