force-app/main/default/objects/Opportunity/fields/Manufacturer_reference_number__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_reference_number__c</fullName>
    <label>Manufacturer reference number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>