force-app/main/default/objects/Opportunity/fields/Mark_Up_Amount__c.field-meta.xml
<CustomField>
    <fullName>Mark_Up_Amount__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.Mark_Up_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mark Up Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>