force-app/main/default/objects/Opportunity/fields/One_Time_Amount__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Amount__c</fullName>
    <label>One-Time Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.SBQQ__SubscriptionType__c</field>
        <operation>equals</operation>
        <value>One-time</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>