force-app/main/default/objects/Opportunity/fields/Opp_Integer_Arbutus__c.field-meta.xml
<CustomField>
    <fullName>Opp_Integer_Arbutus__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Opp Integer_Arbutus</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>