force-app/main/default/objects/Opportunity/fields/Opportunity_Red_Flag__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Red_Flag__c</fullName>
    <formula>IF(
    AND(
        NOT(IsClosed),
        OR(
            ISPICKVAL(StageName, &quot;Prospecting&quot;),
            ISPICKVAL(StageName, &quot;Qualified&quot;)
        ),
        (TODAY() - DATEVALUE(CreatedDate)) &gt; 10
    ),
    TEXT(StageName) &amp; &quot;: Red Flag&quot;,
    &quot;&quot;
)</formula>
    <label>Opportunity Red Flag</label>
    <type>Text</type>
</CustomField>