force-app/main/default/objects/Opportunity/fields/Primary_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Manufacturer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Segment__c</field>
            <operation>equals</operation>
            <value>Manufacturer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Primary Manufacturer)</relationshipLabel>
    <relationshipName>ManufacuturerOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>