force-app/main/default/objects/Opportunity/fields/RFQ_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Due_Date__c</fullName>
    <description>Date the RFQ is due for the client</description>
    <inlineHelpText>Date the RFQ is due for the client.</inlineHelpText>
    <label>RFQ Due Date</label>
    <type>Date</type>
</CustomField>