force-app/main/default/objects/Opportunity/fields/Today_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_Closed_Date__c</fullName>
    <description>Used for Skyvia integration to create QuickBooks invoices.</description>
    <formula>CloseDate = TODAY()</formula>
    <inlineHelpText>Used for Skyvia integration to create QuickBooks invoices.</inlineHelpText>
    <label>Today Closed Date</label>
    <type>Checkbox</type>
</CustomField>