force-app/main/default/objects/Opportunity/recordTypes/Arbutus_WestAgencyLtd.recordType-meta.xml
<RecordType>
    <fullName>Arbutus_WestAgencyLtd</fullName>
    <active>true</active>
    <businessProcess>Arbutus Sales Process</businessProcess>
    <description>This record type is for creating deals where Arbutus is the Agent</description>
    <label>Arbutus West Agency Ltd.</label>
</RecordType>