force-app/main/default/objects/Opportunity/recordTypes/AWALDistributor.recordType-meta.xml
<RecordType>
    <fullName>AWALDistributor</fullName>
    <active>true</active>
    <businessProcess>Arbutus Sales Process</businessProcess>
    <description>This is the record type for a Buy/Sell deal where Arbutus is the Distributor</description>
    <label>AWAL Distributor</label>
</RecordType>