force-app/main/default/objects/Opportunity/recordTypes/CSSP_Service_Contract.recordType-meta.xml
<RecordType>
    <fullName>CSSP_Service_Contract</fullName>
    <active>true</active>
    <businessProcess>CSSP Process</businessProcess>
    <label>CSSP Service Contract</label>
</RecordType>