force-app/main/default/objects/Opportunity/recordTypes/Fundamental_Power.recordType-meta.xml
<RecordType>
    <fullName>Fundamental_Power</fullName>
    <active>true</active>
    <businessProcess>Fundamental Power Solution</businessProcess>
    <description>This record type is solely for creating deals for the Fundamental Power business unit</description>
    <label>Fundamental Power Solutions</label>
</RecordType>