force-app/main/default/objects/Opportunity/validationRules/Primary_Quote_Must_be_Accepted.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Quote_Must_be_Accepted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, &quot;PO Issued&quot;),
        ISPICKVAL(StageName, &quot;Closed Won&quot;)
    ),
    NOT(ISPICKVAL(SBQQ__PrimaryQuote__r.SBQQ__Status__c, &quot;Accepted&quot;))
)</errorConditionFormula>
    <errorMessage>In order to move to stage PO Issued, the Primary Quote must be accepted.</errorMessage>
</ValidationRule>