force-app/main/default/objects/Opportunity/listViews/Arbutus_West_Agency_Ltd_All_Products.listView-meta.xml
<ListView>
    <fullName>Arbutus_West_Agency_Ltd_All_Products</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Primary_Manufacturer__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Arbutus_WestAgencyLtd</value>
    </filters>
    <label>Arbutus West Agency Ltd - All Products</label>
</ListView>