force-app/main/default/objects/Opportunity/listViews/Arbutus_West_Agency_Ltd_Rex.listView-meta.xml
<ListView>
    <fullName>Arbutus_West_Agency_Ltd_Rex</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.LAST_STG_CHG_DAYS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Arbutus_WestAgencyLtd</value>
    </filters>
    <filters>
        <field>Primary_Manufacturer__c</field>
        <operation>contains</operation>
        <value>REx</value>
    </filters>
    <label>Arbutus West Agency Ltd - Rex</label>
</ListView>