force-app/main/default/objects/Opportunity/listViews/AWAL_Distributor_Engineering.listView-meta.xml
<ListView>
    <fullName>AWAL_Distributor_Engineering</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Primary_Manufacturer__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Commission_Amount__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.AWALDistributor</value>
    </filters>
    <filters>
        <field>Primary_Manufacturer__c</field>
        <operation>equals</operation>
        <value>Arbutus West</value>
    </filters>
    <label>AWAL Distributor - Engineering</label>
    <sharedTo>
        <group>Management</group>
    </sharedTo>
</ListView>