force-app/main/default/objects/Opportunity/listViews/AWAL_Hitachi.listView-meta.xml
<ListView>
    <fullName>AWAL_Hitachi</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Manufacturer__c</field>
        <operation>contains</operation>
        <value>Hitachi</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Arbutus_WestAgencyLtd</value>
    </filters>
    <label>Arbutus West Agency Ltd. - Hitachi</label>
</ListView>