force-app/main/default/objects/Opportunity/listViews/AWAL_Powell.listView-meta.xml
<ListView>
    <fullName>AWAL_Powell</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Primary_Manufacturer__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Arbutus_WestAgencyLtd</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Powell</value>
    </filters>
    <label>Arbutus West Agency Ltd - Powell</label>
</ListView>